# assertize

./: Makefile  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
src/: assertize.py
tests/: test_all.py
