[tool.poetry]
name = "assertize"
version = "0.1.0"
description = "Convert `self.assertSomething(...)` to `assert something`."
authors = ["Stefane Fermigier <sf@fermigier.com>"]
license = "GPL"

packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
libcst = "*"

[tool.poetry.dev-dependencies]
# Testing
pytest = "^6.2.1"
pytest-cov = "*"
coveralls = "*"

# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"
mypy = "*"

# Formatting
isort = "*"
black = { version = "*", allow-prereleases = true }

# Other tools
pre-commit = "*"
safety = "*"

devtools = "^0.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
assertize = 'assertize:main'
